# korba-gnome-shell-extensions

./: .eslintrc.yml  .gitignore  CLAUDE.md  GEMINI.md  meson.build  package-lock.json  package.json  review_001-dynamic-window-tiling.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
advanced-window-decoration/: extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.advanced-window-decoration.gschema.xml  package-lock.json  package.json  prefs.js
advanced-window-decoration/lib/: borderController.js  decorationManager.js  decorationManager.test.js  settingsClamp.js  settingsClamp.test.js  titlebarController.js  windowFilter.js  windowFilter.test.js  windowRegistry.js  windowRegistry.test.js
scripts/: package-extension.sh
spatial-window-navigator/: extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.spatial-window-navigator.gschema.xml  prefs.js
specs/001-dynamic-window-tiling/: data-model.md  plan.md  quickstart.md  research.md  review_001-dynamic-window-tiling.md  smoke-test.md  spec.md  tasks.md
specs/002-window-decoration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
workspace-tiling-window-manager/: extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.workspace-tiling-window-manager.gschema.xml  package-lock.json  package.json  prefs.js
workspace-tiling-window-manager/lib/: dwindleLayout.js  dwindleLayout.test.js  keybindingRow.js  layoutProvider.js  tilingManager.js  utils.js  workspaceTiler.js
workspace-tiling-window-manager/po/: workspace-tiling-window-manager.pot
(+6 files in other folders)
